@@ -18,6 +18,35 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  */
 
+/*
+ * The following commands where traced on the serial port. From these, the
+ * COM_POLL_STAT command is just an example of how this command looks.
+ * Inside the driver, we'll overwrite the default with specially crafted
+ * 'random' data (see the comments).
+ */
+#define	COM_INITIALIZE	"ZCADLIOPERJD\r"
+#define	COM_BATT_TEST	"ZFSDERBTRFGY\r"
+#define	COM_MAINS_TEST	"ZAVLEJFICOPR\r"
+#define	COM_ABORT_TEST	"ZGWLEJFICOPR\r"
+#define	COM_TOGGLE_BEEP	"ZELWSABPMBEQ\r"
+#define	COM_POLL_STAT	"ZHDGFGDJELBC\r"
+
+/*
+ * The following command is "ZBASdddWLPGE\r", where 'ddd' equals the number of
+ * seconds delay before the UPS switches off. Value must be greater than or
+ * equal to 1. Mapping of the numerals is 0=A, 1=B, 2=C, etc.
+ */
+#define	SHUTDOWN_RETURN	"ZBASAABWLPGE\r"	/* shutdown in 1 second */
+
+/*
+ * The following commands are "ZAFdddRrrrrO\r", where 'ddd' equals the number
+ * of seconds delay before the UPS switches off and 'rrrr' the number of
+ * minutes before it restarts. Both values must be greater than or equal to 1.
+ * Mapping of the numerals is 0=A, 1=B, 2=C, etc.
+ */
+#define	SHUTDOWN_REBOOT	"ZAFAABRAAABO\r"	/* shutdown in 1 second, return after 1 minute */
+#define	GRACEFUL_REBOOT	"ZAFACARAAABO\r"	/* shutdown in 20 seconds, return after 1 minute */
+
 typedef struct {
 	char	onbattery;
 	char	dunno_02;
